--- a/index.html
+++ b/index.html
@@ -1,37 +1,6 @@
 <html>
 <head>
-	<style>
-         #heading{
-			 color:black; 
-			 background-color: blue;
-			}
-	       p{
-	       	 font-size: 20
-	       }
-	     #by{
-	     	text-align: right;
-	     }
-	     #dateandday{
-	     	color:black;
-	     	text-align: center;
-	     	background-color: green;
-
-	     }
-	     #dateboxes{
-	     	width: 150;
-	    
-	     	background-color: yellow;
-	     }
-	     #notes{
-	     	color: blue;
-	     	font-size: 20;
-	     }
-	     #calendar{
-	     	width:1350;
-	     	height: 600;
-	     	background-color: blue;
-	     }
-	</style>
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 <body>
