--- a/index2.html
+++ b/index2.html
@@ -1,3 +1,4 @@
+
 <html>
 <head> 
 <link rel="stylesheet" type="text/css" href="style.css">
@@ -22,72 +23,79 @@
         <td>week3</td>
         <td>week4</td>
         <td>week5</td>
+        <td>week6</td>
 
      </tr>
 
     <tr>
         <td>Sunday</td>
-        <td>      </td>
-        <td>      </td>
-        <td>      </td>
-        <td>      </td>
-        <td>      </td>
-
+        <td id="1">      </td>
+        <td id="2">      </td>
+        <td id="3">      </td>
+        <td id="4">      </td>
+        <td id="5">      </td>
+        <td id="6">      </td>
       </tr>
 
       <tr>
         <td>Monday</td>
-        <td>      </td>
-        <td>      </td>
-        <td>      </td>
-        <td>      </td>
-        <td>      </td>
+        <td id="7">      </td>
+        <td id="8">      </td>
+        <td id="9">      </td>
+        <td id="10">      </td>
+        <td id="11">      </td>
+        <td id="12">      </td>
          </tr>
 
       <tr>
         <td>Tuesday</td>
-        <td>      </td>
-        <td>      </td>
-        <td>      </td>
-        <td>      </td>
-        <td>      </td>
-             </tr>
+        <td id="13">      </td>
+        <td id="14">      </td>
+        <td id="15">      </td>
+        <td id="16">      </td>
+        <td id="17">      </td>
+        <td id="18">      </td>
+         </tr>
 
       <tr>
         <td>Wednesday</td>
-        <td>      </td>
-        <td>      </td>
-        <td>      </td>
-        <td>      </td>
-        <td>      </td>
-            </tr>
+        <td id="19">      </td>
+        <td id="20">      </td>
+        <td id="21">      </td>
+        <td id="22">      </td>
+        <td id="23">      </td>
+        <td id="24">      </td>
+         </tr>
 
       <tr>
         <td>Thursday</td>
-        <td>      </td>
-        <td>      </td>
-        <td>      </td>
-        <td>      </td>
-        <td>      </td>
+        <td id="25">      </td>
+        <td id="26">      </td>
+        <td id="27">      </td>
+        <td id="28">      </td>
+        <td id="29">      </td>
+        <td id="30">      </td>
          </tr>
 
       <tr>
         <td>Friday</td>
-        <td>      </td>
-        <td>      </td>
-        <td>      </td>
-        <td>      </td>
-        <td>      </td>
+        <td id="31">      </td>
+        <td id="32">      </td>
+        <td id="33">      </td>
+        <td id="34">      </td>
+        <td id="35">      </td>
+        <td id="36">      </td>
          </tr>
 
       <tr>
         <td>Saturday</td>
-        <td>      </td>
-        <td>      </td>
-        <td>      </td>
-        <td>      </td>
-        <td>      </td>
-              </tr>
+        <td id="37">      </td>
+        <td id="38">      </td>
+        <td id="39">      </td>
+        <td id="40">      </td>
+        <td id="41">      </td>
+        <td id="42">      </td>
+         </tr>
 
 
 
